use sl variables for spacing of the header and remove fixed position from it.

--- a/src/scss/_base.scss
+++ b/src/scss/_base.scss
@@ -67,7 +67,6 @@ a {
 }
 
 .app-header-padding {
-  padding-top: 80px;
 }
 
 // generic-entry ------------
